--- a/main.html
+++ b/main.html
@@ -8,6 +8,18 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<ol>
+		<li data-ns-test="shoppingList">laptop</li>
+		<li data-ns-test="shoppingList">phone</li>
+		<li data-ns-test="shoppingList">car</li>
+	</ol>
+
+	<ul>
+		<li data-ns-test="holidayList">Goa</li>
+		<li data-ns-test="holidayList">Maldives</li>
+		<li data-ns-test="holidayList">Paris</li>
+	</ul>
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
